# final-project-shpr8875

./: ReadMe  ReadMe.md
bmp180sensor/: read_temp.py
lcd_interface/: bmp180sensor.py  lcd_display.py
mqtt-data-acquistion/: lcd_display.py  publisher.py  subscriber.py
rust-examples/hello-world/: Cargo.toml
rust-examples/hello-world/src/: main.rs
rust-examples/mqtt-subscriber/: Cargo.toml  mqtt_subscriber_0.1.0.bb
rust-examples/mqtt-subscriber/src/: main.rs
rust-examples/ser-des-example/: Cargo.toml  ser-des-example_0.1.0.bb
