[package]
name = "mqtt_subscriber"
version = "0.1.0"
authors = ["Induja Narayanan <n.induja@gmail.com>"]
edition = "2018"
repository = "https://github.com/cu-ecen-aeld/final-project-shpr8875/tree/main/rust-examples/mqtt-subscriber"
homepage="https://github.com/cu-ecen-aeld/final-project-Induja21"
description = "A simple MQTT subscriber for receiving messages"

[dependencies]
# MQTT client library for Rust
paho-mqtt = "0.12.5"
